Fix authentication page on mobile devices

--- a/resources/styles/components/forms.css
+++ b/resources/styles/components/forms.css
@@ -1,3 +1,7 @@
+form {
+    @apply .m-0;
+}
+
 textarea, select, input, button {
     @apply .outline-none;
 }
